# ARdroneUAV

./: README  README~  scriptJNI.bat
Final/: app.h  ardrone_navdata_client.cpp  ardrone_navdata_client.h  at_cmds.cpp  dronecamparameters.txt  main.cpp  make.bat  maths.h  navdata.cpp  navdata.h  temp_SendKeys.VBS  util.cpp  util.h  video.cpp  video.h
Final/FAST/: fast.c  fast.h
Final/OTHER/: Latency.csv  Latency.txt  New Text Document.csv  New Text Document22.csv  descriptor.cc  descriptor.h  halfsize_neon.cc  udp.c  udp.h
Final/jni/: Android.mk  Application.mk  Tom_fast9.h  Tom_fast_9.cpp  Tom_fast_score.cpp  Tom_fast_score.h  camera_coord_lookup.cpp  camera_coord_lookup.h  commands.cpp  commands.h  descriptor.cpp  descriptor.h  fast.c  fly  halfsize_neon.cpp  halfsize_neon.h  imagepoint.h  (+12 more)
ObjectTracker/: .cproject  .project
OpenCVTesting/: .cproject  .project
TEMP/: Quickstart.txt
TO SRP STUDENTS/: Notes to future programmers.txt
UAV/: .cproject  .project
Wifi Latency Test/: Result  Result~
ardrone4/: .gitignore  CMakeLists.txt
ardrone4/fly/: .gitignore  CMakeLists.txt  controls.c  controls.h  controlthread.c  controlthread.h  main_fly.c  make.bat
ardrone4/fly/control_strategies/: pid.c  pid.h  pid_strategy.c  pid_strategy.h
ardrone4/horizontal_velocities/: .gitignore  CMakeLists.txt  horizontal_velocities.c  horizontal_velocities.h  main_horizontal_velocities.c  make.bat
onboard/: New Text Document.txt  ftpscript1.txt  ftpscript3.txt  ftpscript4.txt  script.bat  script2.bat
v4l2_test/: v4l2_test2.c  v4l2_test3.c  v4l2_test4.c  v4l2_test5.c
(+988 files in other folders)
